--- a/UnifyIDTest/app/src/main/res/layout/content_main.xml
+++ b/UnifyIDTest/app/src/main/res/layout/content_main.xml
@@ -13,46 +13,51 @@
     tools:showIn="@layout/activity_main">
 
     <Button
-        android:layout_width="175sp"
+        android:layout_width="160sp"
         android:layout_height="200sp"
         android:text="LIGHT"
         android:id="@+id/butLight"
-        android:layout_toLeftOf="@+id/butGrav"
-        android:layout_toStartOf="@+id/butGrav"
-        android:layout_below="@+id/textView" />
+        android:layout_below="@+id/textView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:elevation="5dp"
+        android:translationZ="15dp"/>
 
     <Button
-        android:layout_width="175sp"
+        android:layout_width="160sp"
         android:layout_height="200sp"
         android:text="GRAVITY"
         android:id="@+id/butGrav"
-        android:layout_below="@+id/textView"
+        android:layout_above="@+id/butnGyro"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:elevation="5dp"
+        android:translationZ="15dp"/>
 
     <Button
-        android:layout_width="170sp"
+    android:layout_width="160sp"
+    android:layout_height="200sp"
+    android:text="Accelerometer"
+    android:id="@+id/butnAcceler"
+        android:layout_alignTop="@+id/butnGyro"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:elevation="5dp"
+        android:translationZ="15dp"/>
+
+    <Button
+        android:layout_width="160sp"
         android:layout_height="200sp"
-        android:text="Accelerometer"
-        android:id="@+id/butnAcceler"
+        android:text="GyroScope"
+        android:id="@+id/butnGyro"
+        android:layout_marginTop="42dp"
         android:layout_below="@+id/butLight"
-        android:layout_alignLeft="@+id/butLight"
-        android:layout_alignStart="@+id/butLight"
-        android:layout_alignRight="@+id/butLight"
-        android:layout_alignEnd="@+id/butLight" />
-
-    <Button
-        android:layout_width="170sp"
-        android:layout_height="200sp"
-        android:text="GYROSCOPE"
-        android:id="@+id/butGyro"
-        android:paddingLeft="5sp"
-        android:paddingRight="5sp"
-        android:layout_alignTop="@+id/butnAcceler"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignLeft="@+id/butGrav"
-        android:layout_alignStart="@+id/butGrav" />
+        android:layout_alignStart="@+id/butGrav"
+        android:elevation="5dp"
+        android:translationZ="15dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -61,6 +66,7 @@
         android:text="Click On Sensor Button to get Data"
         android:id="@+id/textView"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:elevation="5dp"/>
 
 </RelativeLayout>
